--- a/app/styles/sass/blocks/_header.scss
+++ b/app/styles/sass/blocks/_header.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.4);
