--- a/app/styles/sass/pages/_about.scss
+++ b/app/styles/sass/pages/_about.scss
@@ -8,6 +8,8 @@
     max-width: 1232px;
     padding: 0 16px;
     margin: 0 auto;
+    z-index: 10;
+    position: relative;
   }
 
   &--title {
@@ -27,17 +29,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 184px;
+    z-index: 10;
 
     &--image {
       width: 532px;
       height: 532px;
       border-radius: 50%;
       overflow: hidden;
-      position: relative;
 
       img {
-        position: relative;
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -79,5 +79,162 @@
         }
       }
     }
+  }
+
+  .a_box--big--wrap {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    max-width: 1132px;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+
+  .a__wrapper {
+    position: relative;
+  }
+
+  .a_box--big--bg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+    z-index: 1;
+  }
+
+  .a_mood--image {
+    position: absolute;
+    width: 736px;
+    height: 736px;
+    z-index: 3;
+    right: -60px;
+    bottom: 0;
+    transform: translateY(40%);
+
+    .a_mood--image--main {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      z-index: 2;
+    }
+
+    .a_mood--image--svg1 {
+      width: 542px;
+      height: auto;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      transform: translateX(-30%) translateY(20%);
+    }
+
+    .a_mood--image--svg2 {
+      width: 542px;
+      height: auto;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      transform: translateX(20%) translateY(20%);
+    }
+  }
+
+  &--mood {
+    position: relative;
+    width: 100%;
+    padding: 184px 0 365px;
+    z-index: 4;
+
+    &--item {
+      width: 100%;
+      max-width: 522px;
+
+      &__title {
+        font-family: 'modesto-open-inline-fill', sans-serif;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 36px;
+        line-height: 140.4%;
+        letter-spacing: 1.5px;
+        color: #000000;
+        margin-bottom: 44px;
+      }
+
+      &__text {
+        p {
+          font-family: 'freight-sans-pro', sans-serif;
+          font-style: normal;
+          font-weight: 300;
+          font-size: 24px;
+          line-height: 140.4%;
+          letter-spacing: 1.5px;
+          color: #000000;
+          margin-bottom: 14px;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+    }
+  }
+
+
+  &--mindful {
+    position: relative;
+    width: 100%;
+    padding: 80px 0 513px;
+    z-index: 2;
+
+    .a_box--big--bg {
+      height: calc(100% + 200px);
+    }
+
+    &--item {
+      width: 100%;
+      max-width: 585px;
+      position: relative;
+      z-index: 3;
+
+      &__title {
+        font-family: 'modesto-open-inline-fill', sans-serif;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 36px;
+        line-height: 140.4%;
+        letter-spacing: 1.5px;
+        color: #000000;
+        margin-bottom: 24px;
+      }
+
+      &__text {
+        p {
+          font-family: 'freight-sans-pro', sans-serif;
+          font-style: normal;
+          font-weight: 300;
+          font-size: 24px;
+          line-height: 140.4%;
+          letter-spacing: 1.5px;
+          color: #000000;
+          margin-bottom: 14px;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+    }
+  }
+
+  .a_box--mindful--svg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 400px;
+    height: auto;
+    z-index: 1;
+    transform: translateX(-70%) translateY(20%);
   }
 }
