--- a/app/styles/sass/pages/_single-product.scss
+++ b/app/styles/sass/pages/_single-product.scss
@@ -51,10 +51,69 @@
     margin-bottom: 20px;
   }
 
+  &--s_name {
+    margin-bottom: 21px;
+
+    p {
+      font-family: 'freight-sans-pro', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 25px;
+      letter-spacing: 1px;
+      color: #000000;
+    }
+  }
+
   &--size {
     margin-bottom: 24px;
     border-bottom: 1px solid #EDC198;
     padding-bottom: 24px;
+
+    .sp_main--select {
+      position: relative;
+      display: flex;
+
+      &--wrap {
+        position: relative;
+
+        &::after {
+          top: 50%;
+          transform: translateY(-50%);
+          right: 20px;
+          position: absolute;
+          content: "";
+          background-image: url("data:image/svg+xml,%3Csvg  viewBox='0 0 14 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.2785 1.10432L7.19531 7.20244L13.1121 1.10432' stroke='black'/%3E%3C/svg%3E%0A");
+          width: 14px;
+          height: 10px;
+          z-index: 2;
+          background-repeat: no-repeat;
+          background-size: contain;
+        }
+      }
+
+      select {
+        z-index: 1;
+        appearance: none;
+        background: #FFFFFF;
+        border: 1px solid #EDC198;
+        box-sizing: border-box;
+        border-radius: 14px;
+        padding: 8px 69px 12px 24px;
+        font-family: 'freight-sans-pro', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        letter-spacing: 1px;
+        color: #000000;
+        outline: none;
+        cursor: pointer;
+
+        &::-ms-expand {
+          display: none;
+        }
+      }
+    }
 
     .sp_main--radio {
       display: flex;
@@ -483,5 +542,385 @@
     height: auto;
     object-fit: cover;
     z-index: 1;
+  }
+
+  &--box {
+    display: flex;
+    max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  &--item {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    &:nth-child(1) {
+      left: 40px;
+    }
+
+    &:nth-child(3) {
+      left: -40px;
+    }
+
+    &__text {
+      position: relative;
+      z-index: 2;
+
+      p {
+        font-family: 'freight-sans-pro', sans-serif;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 27px;
+        text-align: center;
+        letter-spacing: 1px;
+        text-transform: capitalize;
+        color: #000000;
+      }
+    }
+
+    &__image {
+      position: absolute;
+      top: 18px;
+      left: 18px;
+      width: calc(100% - 36px);
+      height: calc(100% - 36px);
+      overflow: hidden;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  &--footer {
+    margin-top: 44px;
+    padding-bottom: 27px;
+    border-bottom: 1px solid #fff;
+
+    p {
+      font-family: 'freight-sans-pro', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 98.1%;
+      text-align: center;
+      letter-spacing: 4px;
+      text-transform: capitalize;
+      color: #252525;
+    }
+  }
+}
+
+
+.sp_unique {
+  margin-bottom: 135px;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  z-index: 3;
+
+  &--wrapper {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &--text {
+    max-width: 550px;
+    margin-right: 30px;
+
+    &__title {
+      font-family: 'modesto-open-inline-fill', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 36px;
+      line-height: 39px;
+      letter-spacing: 4px;
+      text-transform: capitalize;
+      color: #000000;
+      margin-bottom: 68px;
+    }
+
+    p {
+      font-family: 'freight-sans-pro', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 31px;
+      letter-spacing: 0.05em;
+      color: #424750;
+      margin-bottom: 30px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &--image {
+    position: relative;
+    width: 670px;
+    height: auto;
+
+    img {
+      position: relative;
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+.sp_recommended {
+  position: relative;
+  padding-bottom: 597px;
+
+  &--wrapper {
+    position: relative;
+    z-index: 2;
+    max-width: calc(756px + 32px);
+    width: 100%;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+
+  &--bg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+
+  &--title {
+    font-family: 'modesto-open-inline-fill', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 39px;
+    text-align: center;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    color: #000000;
+    max-width: 410px;
+    margin: 0 auto 44px;
+  }
+
+  &--description {
+    margin-bottom: 44px;
+
+    p {
+      font-family: 'freight-sans-pro', sans-serif;
+      font-style: italic;
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 32px;
+      text-align: center;
+      letter-spacing: 0.05em;
+      color: #424750;
+    }
+
+  }
+
+  &--box {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &--item {
+    width: calc(33.33%);
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+
+    &__icon {
+      width: 70px;
+      height: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      margin-bottom: 14px;
+    }
+
+    &__text {
+      p {
+        font-family: 'freight-sans-pro', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 25px;
+        text-align: center;
+        letter-spacing: 0.045em;
+        color: #707070;
+      }
+    }
+  }
+
+  &--f_description {
+    p {
+      font-family: 'freight-sans-pro', sans-serif;
+      font-style: italic;
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 32px;
+      text-align: center;
+      letter-spacing: 0.05em;
+      color: #424750;
+    }
+  }
+}
+
+.sp_reviews {
+  padding: 67px 0;
+
+  &--wrapper {
+    width: 100%;
+    max-width: calc(1015px + 32px);
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+
+  &--title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+
+    span {
+      font-family: 'modesto-open-inline-fill', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 36px;
+      line-height: 39px;
+      letter-spacing: 4px;
+      text-transform: capitalize;
+      color: #000000;
+      margin-bottom: 18px;
+    }
+
+    &__stars {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      span {
+        color: #F2C5A5;
+        letter-spacing: -2.1px;
+        text-transform: capitalize;
+        margin-bottom: 4px;
+      }
+    }
+  }
+
+  &--box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  &--item {
+    padding: 20px 40px 30px;
+    border-top: 1px solid #EDB179;
+    display: flex;
+
+    &:last-child {
+      border-bottom: 1px solid #EDB179;
+    }
+
+    &__name {
+      display: flex;
+      flex-direction: column;
+      width: calc(16% - 10px);
+      margin-right: 10px;
+      font-family: 'freight-sans-pro', sans-serif;
+
+      span {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+        letter-spacing: 1px;
+        color: #000000;
+        margin-bottom: 12px;
+      }
+
+      time {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 25px;
+        letter-spacing: 1px;
+        color: #EDC198;
+      }
+    }
+
+    &__info {
+      width: 84%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__stars {
+      margin-bottom: 14px;
+    }
+
+    &__txt {
+      p {
+        font-family: 'freight-sans-pro', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+        letter-spacing: 1px;
+        color: #000000;
+        margin-bottom: 14px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  .button__more {
+    width: 309px;
+    height: 58px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin: 44px auto 0;
+
+    span {
+      font-family: 'freight-sans-pro', sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 19px;
+      line-height: 144.5%;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      letter-spacing: 0.05em;
+      color: #FFFFFF;
+    }
   }
 }
