--- a/app/styles/sass/pages/_main-page.scss
+++ b/app/styles/sass/pages/_main-page.scss
@@ -63,6 +63,14 @@
   padding-bottom: 94px;
   overflow: hidden;
 
+  &--mobile__bg {
+    display: none;
+  }
+
+  .swiper-button-prev, .swiper-button-next {
+    display: none;
+  }
+
   .container {
     position: relative;
     z-index: 3;
@@ -90,8 +98,6 @@
   }
 
   &--item {
-    width: 33.33%;
-    padding: 0 45px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -230,7 +236,7 @@
 
 .benefits__section {
   position: relative;
-  padding: 111px 0 131px;
+  padding: 200px 0 300px;
 
   .container {
     position: relative;
@@ -247,7 +253,7 @@
     text-transform: uppercase;
     color: #000000;
     padding-bottom: 25px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #fff;
     text-align: center;
     margin-bottom: 85px;
   }
@@ -315,8 +321,8 @@
   &--footer {
     margin-top: 78px;
     width: 100%;
-    border-top: 1px solid #000;
-    padding-top: 30px;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 30px;
 
     &--text {
       p {
@@ -327,7 +333,7 @@
         font-size: 24px;
         line-height: 26px;
         letter-spacing: 4px;
-        text-transform: uppercase;
+        text-transform: capitalize;
         color: #252525;
       }
     }
@@ -342,6 +348,10 @@
     object-fit: cover;
     z-index: 1;
   }
+
+  .benefits__mobile {
+    display: none;
+  }
 }
 
 .mushroom__section {
@@ -349,9 +359,9 @@
   min-height: 940px;
 
   .mushroom__wrap {
-    top: 50%;
+    top: 42%;
     transform: translateY(-50%);
-    width: calc(50% - 100px);
+    width: calc(53% - 100px);
     position: absolute;
     left: 100px;
     z-index: 2;
@@ -359,10 +369,10 @@
 
   .mushroom__line {
     position: absolute;
-    width: calc(100% - 387px);
+    width: 100%;
     height: 2px;
     background: #fff;
-    top: 50px;
+    top: 50%;
     left: 0;
     transition: width .1s ease;
 
