--- a/app/styles/sass/pages/_products.scss
+++ b/app/styles/sass/pages/_products.scss
@@ -28,7 +28,7 @@
     text-align: center;
     letter-spacing: 4px;
     text-transform: capitalize;
-    color: #FFFFFF;
+    color: #484848;
     margin-bottom: 23px;
   }
 
@@ -41,7 +41,7 @@
       line-height: 25px;
       text-align: center;
       letter-spacing: 1px;
-      color: #FFFFFF;
+      color: #484848;
       margin-bottom: 14px;
 
       &:last-child {
