--- a/app/styles/sass/media.scss
+++ b/app/styles/sass/media.scss
@@ -9,3 +9,367 @@
     font-size: 16px;
   }
 }
+
+
+@media only screen and (max-width: 1170px) {
+  .header__main--nav {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: -200vw;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(20px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: left .4s ease-in-out, opacity 0s .4s, visibility 0s .4s;
+
+    &.active {
+      left: 0;
+      opacity: 1;
+      visibility: visible;
+      z-index: 55;
+      transition: left .4s ease-in-out;
+    }
+
+    nav div ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      li {
+        margin: 20px 0 20px;
+
+        &.header__main--button {
+          display: none;
+        }
+
+        a {
+          font-size: 18px;
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
+
+  .header__main {
+    justify-content: space-between;
+    padding: 5px 16px;
+  }
+  .header__main--logo {
+    width: 140px;
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: initial;
+  }
+
+  .header__main--cart {
+    width: 40px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header__main--burger {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: relative;
+    z-index: 56;
+
+    &.active {
+      i {
+        &:nth-child(1) {
+          top: 16px;
+          transform: translateX(-50%) rotate(45deg);
+        }
+
+        &:nth-child(2) {
+          width: 0;
+        }
+
+        &:nth-child(3) {
+          top: 16px;
+          transform: translateX(-50%) rotate(-45deg);
+        }
+      }
+    }
+
+    i {
+      width: 20px;
+      height: 1px;
+      background: #505050;
+      position: absolute;
+      top: 8px;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: all .4s ease-in-out;
+
+      &:nth-child(2) {
+        top: 16px;
+      }
+
+      &:nth-child(3) {
+        top: 24px;
+      }
+    }
+  }
+
+  .explore__section--bg {
+    height: 100%;
+    object-fit: initial;
+  }
+
+  .crafted__section--image {
+    width: 40%;
+    max-width: initial;
+    height: 500px;
+  }
+
+  .crafted__section--info {
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .main__section {
+    min-height: initial;
+    padding: 140px 0 200px;
+  }
+
+  .main__section--title {
+    font-size: 24px;
+    line-height: 26px;
+  }
+
+  .main__section--button span {
+    font-weight: 600;
+    font-size: 15px;
+  }
+
+  .explore__section--bg, .explore__section--text {
+    display: none;
+  }
+
+  .explore__section {
+    padding-top: 40px;
+    background: #fff;
+    overflow: initial;
+  }
+
+  .explore__section--mobile__bg {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: translateY(-90%);
+
+    .bg__text {
+      position: absolute;
+      top: 10px;
+      left: 16px;
+      width: calc(100% - 32px);
+      height: auto;
+      z-index: 2;
+    }
+
+    .bg__box {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: auto;
+      z-index: 1;
+    }
+  }
+  .explore__section {
+    .swiper-button-next, .swiper-button-prev {
+      display: block;
+      color: #F6B382;
+      width: 20px;
+      height: 36px;
+
+      &::after {
+        font-size: 30px;
+      }
+    }
+  }
+
+  .explore-slider {
+    width: calc(100% - 60px);
+  }
+
+  .explore__section--title {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  .crafted__section {
+    flex-direction: column;
+  }
+
+  .crafted__section--image {
+    width: 100%;
+    height: 400px;
+  }
+
+  .crafted__section--info {
+    width: 100%;
+    padding: 52px 16px 100px;
+  }
+
+  .crafted__section--info h2, .crafted__section--text {
+    max-width: initial;
+  }
+
+  .crafted__section--info h2 {
+    font-size: 20px;
+    line-height: 22px;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+  }
+
+  .explore__section {
+    padding-bottom: 30px;
+  }
+
+  .crafted__section--text {
+    p {
+      font-size: 12px;
+      line-height: 140.4%;
+    }
+  }
+
+  .benefits__section {
+    padding: 75px 0 90px;
+  }
+
+  .benefits__section--title {
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 30px;
+  }
+
+  .benefits__section--footer {
+    margin-top: 30px;
+  }
+
+  .benefits__section--item__text p {
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  .benefits__section--item {
+    width: 230px;
+    height: 230px;
+  }
+
+  .benefits__section--wrap {
+    justify-content: center;
+  }
+
+  .benefits__section--footer--text p {
+    font-size: 14px;
+    line-height: 98.1%;
+  }
+
+  .mushroom__section .mushroom__wrap {
+    left: 0;
+    width: calc(100% - 32px);
+    max-width: initial;
+    position: relative;
+    top: 0;
+    transform: initial;
+  }
+  .mushroom__section .mushroom__box {
+    width: 100%;
+    max-width: initial;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    p {
+      font-style: italic;
+      font-weight: 300;
+      font-size: 15px;
+    }
+  }
+
+  .mushroom__section {
+    background: #D2DAE1;
+    padding-top: 0;
+    padding-bottom: 50px;
+    min-height: initial;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .mushroom__section--bg {
+    position: relative;
+    height: auto;
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .mushroom__section .mushroom__line {
+    left: initial;
+    top: initial;
+    transform: rotate(-90deg);
+    width: 0;
+  }
+
+  .mushroom__section .mushroom__box--title {
+    font-size: 20px;
+    line-height: 120.5%;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .crafted__section--image {
+    height: 250px;
+  }
+
+  .benefits__section--item {
+    width: 130px;
+    height: 130px;
+  }
+
+  .benefits__section--wrap {
+    position: relative;
+    width: 100%;
+  }
+  .benefits__section--item {
+    &:nth-child(1) {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    &:nth-child(3) {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: initial;
+    }
+  }
+  .benefits__section .benefits__mobile {
+    display: block;
+    position: absolute;
+    top: -50px;
+    left: 0;
+    width: 100%;
+    height: calc(100% + 50px);
+  }
+  .benefits__section--bg {
+    display: none;
+  }
+}
