--- a/app/styles/sass/pages/_single-product.scss
+++ b/app/styles/sass/pages/_single-product.scss
@@ -980,3 +980,21 @@
     }
   }
 }
+
+.sp_main--left {
+  position: relative;
+}
+
+.product-slider {
+  ~ .swiper-button-prev {
+    display: none;
+  }
+
+  ~ .swiper-button-next {
+    display: none;
+  }
+}
+
+.sp_main--right--top {
+  display: none;
+}
