--- a/app/styles/sass/pages/_products.scss
+++ b/app/styles/sass/pages/_products.scss
@@ -29,7 +29,7 @@
     letter-spacing: 4px;
     text-transform: capitalize;
     color: #484848;
-    margin-bottom: 23px;
+    margin-bottom: 8px;
   }
 
   &--description {
@@ -79,6 +79,18 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    transition: all .4s ease;
+
+    &:hover {
+      transform: translateY(-10px);
+
+      .p_products--image {
+        box-shadow: 0 20px 50px rgba(#EDC198, 0.2);
+        img {
+          transform: scale(1.1);
+        }
+      }
+    }
   }
 
   &--image {
@@ -86,6 +98,8 @@
     width: 100%;
     height: 440px;
     margin-bottom: 21px;
+    overflow: hidden;
+    transition: all .3s ease;
 
     img {
       position: absolute;
@@ -94,6 +108,8 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: all .3s ease;
+      transform: scale(1);
     }
   }
 
@@ -156,7 +172,7 @@
     letter-spacing: 4px;
     text-transform: uppercase;
     color: #484848;
-    margin-bottom: 80px;
+    margin-bottom: 30px;
   }
 
   &--description {
@@ -169,6 +185,7 @@
       letter-spacing: 1px;
       color: #484848;
       margin-bottom: 14px;
+
       &:last-child {
         margin-bottom: 0;
       }
