--- a/app/styles/sass/pages/_about.scss
+++ b/app/styles/sass/pages/_about.scss
@@ -16,7 +16,7 @@
     max-width: 1170px;
     height: auto;
     position: relative;
-    margin-bottom: 67px;
+    margin: 0 auto 67px;
 
     img {
       position: relative;
