--- a/app/styles/sass/pages/_main-page.scss
+++ b/app/styles/sass/pages/_main-page.scss
@@ -87,7 +87,6 @@
     text-align: center;
     text-transform: uppercase;
     padding-bottom: 11px;
-    border-bottom: 1px solid #000;
     margin-bottom: 49px;
   }
 
@@ -128,8 +127,8 @@
     }
 
     &__name {
-      padding-top: 24px;
-      border-top: 1px solid #000;
+      padding-top: 22px;
+      border-top: 1px solid #EDC198;
       font-family: 'freight-sans-pro', sans-serif;
       font-style: normal;
       font-weight: 400;
