--- a/app/styles/sass/blocks/_general.scss
+++ b/app/styles/sass/blocks/_general.scss
@@ -33,8 +33,7 @@ body {
   transition: all .3s ease-in-out;
 
   &:hover {
-    background: #d78862;
-    box-shadow: 0 14px 30px rgba(#F1BD98, .6);
+    background: #EB9B62;
   }
 }
 
@@ -48,4 +47,9 @@ body {
 
 #primary {
   padding-top: 100px;
+}
+
+
+[data-scroll-section] {
+  perspective: 1px;
 }
