--- a/app/styles/sass/media.scss
+++ b/app/styles/sass/media.scss
@@ -1120,4 +1120,9 @@
     padding-left: 0;
     padding-right: 0;
   }
+
+  .f_page--item__info {
+    margin-top: 16px;
+    padding-bottom: 16px;
+  }
 }
