--- a/app/styles/sass/media.scss
+++ b/app/styles/sass/media.scss
@@ -9,11 +9,13 @@
     font-size: 16px;
   }
 }
+
 @media only screen and (max-width: 1200px) {
   .a_box .a_mood--image {
     width: 540px;
   }
 }
+
 @media only screen and (max-width: 1170px) {
   .header__main--nav {
     opacity: 0;
@@ -23,12 +25,20 @@
     left: -200vw;
     width: 100vw;
     height: 100vh;
-    background: rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 1);
     display: flex;
     align-items: center;
     justify-content: center;
     transition: left .4s ease-in-out, opacity 0s .4s, visibility 0s .4s;
+
+    nav {
+      width: 100%;
+      padding: 0 30px;
+
+      div {
+        width: 100%;
+      }
+    }
 
     &.active {
       left: 0;
@@ -41,10 +51,13 @@
     nav div ul {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
 
       li {
-        margin: 20px 0 20px;
+        margin: 20px 0 0;
+        padding-bottom: 20px;
+        width: 100%;
+        border-bottom: 1px solid #f6b382;
 
         &.header__main--button {
           display: none;
@@ -52,7 +65,7 @@
 
         a {
           font-size: 18px;
-          text-transform: uppercase;
+          text-transform: none;
         }
       }
     }
@@ -76,6 +89,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    svg {
+      circle, path {
+        stroke: #F6B382;
+      }
+    }
   }
 
   .header__main--burger {
@@ -106,7 +125,7 @@
     i {
       width: 20px;
       height: 1px;
-      background: #505050;
+      background: #F6B382;
       position: absolute;
       top: 8px;
       left: 50%;
@@ -219,14 +238,27 @@
     }
   }
   .explore__section {
+    .swiper-button-prev {
+      margin: 10px 10px 10px 0;
+    }
+
+    .swiper-button-next {
+      margin: 10px 0 10px 10px;
+    }
+
     .swiper-button-next, .swiper-button-prev {
       display: block;
       color: #F6B382;
-      width: 20px;
-      height: 36px;
+      width: 36px;
+      height: 56px;
+      top: calc(50% - 28px);
 
       &::after {
+        position: absolute;
         font-size: 30px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     }
   }
@@ -269,6 +301,7 @@
 }
 
 @media only screen and (max-width: 840px) {
+
   .crafted__section {
     flex-direction: column;
   }
@@ -1006,6 +1039,19 @@
   .sp_unique.sp_unique--tea .sp_unique--text__item:nth-child(2n+2) .sp_unique--text {
     margin-left: 0;
   }
+
+  .sp_main--left .swiper-button-next, .sp_main--left .swiper-button-prev {
+    width: 36px;
+    height: 56px;
+    top: calc(50% - 28px);
+    &:after {
+      position: absolute;
+      font-size: 30px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -1112,7 +1158,7 @@
     margin-right: 0 !important;
   }
 
-  .f_page--item__header.is_active+.f_page--item__info {
+  .f_page--item__header.is_active + .f_page--item__info {
     margin-top: 20px !important;
   }
 
