--- a/app/styles/sass/pages/_single-product.scss
+++ b/app/styles/sass/pages/_single-product.scss
@@ -17,7 +17,7 @@
 
   &--image {
     width: 100%;
-    height: auto;
+    height: 620px;
     overflow: hidden;
     position: relative;
     line-height: 0;
@@ -27,7 +27,8 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
